# lux

./: .biff  .envrc  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .oo-audit.jsonl  .oo-baseline.json  .suppression-audit.jsonl  .suppression-baseline.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  RISKS.md  install.sh  lux-prfaq-v2.bib  lux-prfaq-v2.tex  prfaq.bib  prfaq.tex  pyproject.toml  resume.md
.beads/: .gitignore  README.md  config.yaml  issues.jsonl  metadata.json
.claude/: settings.json
.claude-plugin/: mcp-http.example.json  plugin.json
.claude/agents/: ach.md  adb.md  adt.md  ahj.md  bcs.md  bne.md  bwk.md  edt.md  ghr.md  gvr.md  jms.md  jra.md  kpz.md  kwb.md  mdm.md  rej.md  rmh.md  rop.md  rsc.md  ylc.md
.github/workflows/: biff-notify.yml  docs.yml  lint.yml  release.yml  test.yml
.punt-labs/vox/: vox.md
.tmp/relocated/: display_connection.py  operations_models_menus.py
.vox/: config.md
commands/: lux.md
demos/: containers.py  dashboard.py  interactive.py  menu_bar.py
docs/: README.md  WORKFLOW.md  architecture-introspection-api.md  architecture-proposal.md  architecture-x11-model.md  architecture.tex  class-responsibility-report.md  class-responsibility-review.md  commit_on_idle_reconciliation.tex  display-server.tex  display_lifecycle.tex  display_lifecycle_coverage.md  hub_replicator.tex  hub_replicator_coverage.md  imgui-audit.md  imgui-primitives.md  input_text_reconciliation.tex  mcp-proxy-proposal.md  oo-class-design-review.md  oo-class-design.md  oo-refactoring-plan-review.md  oo-refactoring-plan.md  patch_application.tex  pharo-spikes.md  reconciliation_hub_reject.tex  refactoring-plan.md  review.md  tab_bar_selection.tex  v2-architecture.tex  v2-vision.md  workspace-model.tex
docs/architecture/: claude-code-lux.tex  display-server.tex  domain-model.md  e2e-harness-design.md  element-migration-audit.md  introspection-api.md  io-model.md  luxd-impl.md  mcp-display-liveness.md  one-code-path.md  skill-tool-reusability-audit.md  system.tex  workspace-model.tex  x11-model.md
docs/archive/: README.md  claude-code-lux.tex  coverage-audit.md
docs/concepts/: extension-architecture.tex  pharo-inspiration.md  prfaq.bib  prfaq.tex  self-extending-display.md
docs/oo-refactor/: README.md  draw-command-validation-design.md  dynamic-access-design.md  migration-plan.md  oo-class-design.md  oo-refactoring-plan.md  phase-a-protocol-split.md  pr3-design.md  pr3-v2.1-design.md  pr4-v2.1-design.md  resume.md
docs/research/: spikes.md
docs/standards/: python-oo.md
hooks/: hooks.json  session-start.sh  signal-beads.sh  suppress-output.sh
scripts/: direct_connection_probe.py  font-test.py  manual_smoke.py  release-plugin.sh  run_coverage.py
skills/beads/: SKILL.md
skills/dashboard/: SKILL.md
skills/data-explorer/: SKILL.md
skills/diagram/: SKILL.md
spikes/io_model_v1/: ARCHITECTURE_NOTES.md  README.md  demo.py  pyproject.toml
spikes/io_model_v1/src/lux_spike/: __init__.py  agent.py  codec.py  connection.py  display.py  element.py  elements.py  hub.py  protocols.py  updates.py
spikes/io_model_v1/src/lux_spike/renderers/: __init__.py  null.py  recording.py  text.py
spikes/io_model_v1/tests/: conftest.py  test_roundtrips.py
src/punt_lux/: __init__.py  __main__.py  _backends.py  ast_check.py  client.py  client_label.py  config.py  consent.py  display.py  display_client.py  element_renderer.py  hooks.py  hub.py  hub_paths.py  luxd.py  mcp_endpoint.py  mcp_session.py  mcp_transport.py  menu_item_registry.py  menu_manager.py  paths.py  polled_event.py  protocol.py  query_dispatcher.py  remote.py  rest_client.py  rest_loopback.py  rest_transport.py  runtime.py  scene_inspection.py  scene_inspector.py  scene_manager.py  send_timeout.py  server.py  service.py  session_cleanup.py  session_key.py  show.py  socket_server.py  table_renderer.py  (+5 more)
tests/: ACCEPTANCE.md  CLAUDE.md  conftest.py  display_abstraction.py  test_abc_di_defaults.py  test_abc_registry.py  test_abc_wire_roundtrip.py  test_apps_calculator.py  test_apps_clock.py  test_ast_check.py  test_cli.py  test_client.py  test_client_registry.py  test_collapsing_header_element.py  test_color_picker_migration.py  test_combo_migration.py  test_config.py  test_consent.py  test_direct_connection_probe.py  test_display_client.py  test_display_partition.py  test_display_rebind.py  test_display_refinement.py  test_display_state.py  test_domain_pump.py  test_draw_bounds.py  test_draw_commands.py  test_draw_decoder.py  test_draw_values.py  test_draw_wire.py  test_e2e.py  test_element_walk.py  test_element_wire.py  test_glfw_loader.py  test_glfw_window.py  test_group_element.py  test_hooks.py  test_hub.py  test_hub_factory.py  test_hub_paths.py  (+53 more)
tests/characterization/: __init__.py  build_corpus.py  exerciser.py  snapshot.py  test_exerciser.py  test_parity.py  test_snapshot.py
tests/domain/: test_basics_migration.py  test_dirty_signal.py  test_display.py  test_display_socket_internal.py  test_element.py  test_element_abc.py  test_element_abc_dispatch.py  test_event.py  test_frame_registry.py  test_handler_catalog.py  test_hub_clients.py  test_hub_display_anonymous_elements.py  test_hub_display_composite_recursion.py  test_hub_display_frames.py  test_hub_display_ownership.py  test_hub_interaction_dispatch.py  test_hub_replicator.py  test_ids.py  test_interaction.py  test_interaction_event_builder.py  test_lifecycle.py  test_menu_registry.py  test_patch_batch.py  test_recovery.py  test_scene_presentation.py  test_scene_writer.py  test_single_writer.py  test_snapshot.py  test_store_lock.py  test_subscription.py  test_subscription_registry.py  test_subtree_installer.py  test_subtree_remover.py  test_update.py  test_validation.py  test_validation_walk.py  test_write_seam_field_gate.py
tests/e2e/: __init__.py  agent.py  conftest.py  inspection_view.py  invariants.py  publish_source.py  recording_handler.py  (+7 more)
tools/: audit-python-standards.sh  font-test.py  oo_coupling.py  oo_score.py  run_coverage.py  run_metrics.py  suppression_ratchet.py
(+448 files in other folders)
