[project]
name = "punt-lux"
version = "0.19.1"
description = "The paintbrush for Claude. A visual output surface for AI agents — diagrams, tables, images, and interactive controls."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Punt Labs" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer>=0.15.0,<1",
    "rich>=15,<16",
    "fastmcp>=3.0.0,<4",
    # Direct floor past three HIGH advisories (WebSocket Host/Origin validation,
    # HTTP session principal verification, cross-client task access). Capped
    # below 2.0 because the SDK deletes the WebSocket server transport there,
    # which luxd relies on for the luxd<->mcp-proxy leg.
    "mcp>=1.28.1,<2",
    "pydantic>=2.0.0,<3",
    "starlette>=1.3.1,<2",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
display = [
    "imgui-bundle==1.92.801",
    "Pillow>=12.3.0",
    "numpy>=2.0.0",
    "PyOpenGL>=3.1.0",
    "setproctitle>=1.3.0",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]

# Dev tools live in PEP 735 dependency-groups (uv-native), not
# project.optional-dependencies. Two reasons:
#   1. `uv run` installs default groups automatically — no per-invocation
#      `--group dev` or `--extra dev` flag is needed. The Makefile and CI can
#      use `uv run --extra display <tool>` and the dev tools just work.
#   2. Dev tools are not real extras of the published package. They have no
#      business appearing in `pip install punt-lux[dev]`. Dependency-groups
#      are not exposed via PyPI; they exist for the source checkout only.
[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "mypy>=1.18.1",
    "pyright>=1.1.400",
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
]

[project.scripts]
lux = "punt_lux.__main__:app"
luxd = "punt_lux.luxd:main"

[project.urls]
Homepage = "https://github.com/punt-labs/lux"
Repository = "https://github.com/punt-labs/lux"
"Bug Tracker" = "https://github.com/punt-labs/lux/issues"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "punt_lux"

[tool.ruff]
line-length = 88
target-version = "py313"
# Spike directories are self-contained uv projects with their own pyproject.toml;
# they should not be linted by the main project's ruff config.
extend-exclude = ["spikes/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "RUF",  # Ruff-specific rules
    "S",    # flake8-bandit (security)
    "BLE",  # flake8-blind-except
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "A",    # flake8-builtins
    "ERA",  # flake8-eradicate (commented code)
    "PIE",  # flake8-pie
    "RSE",  # flake8-raise
    "ARG",  # flake8-unused-arguments
    "RET",  # flake8-return
    "PERF", # perflint
    "PTH",  # flake8-use-pathlib
    "ISC",  # flake8-implicit-str-concat
    "FBT",  # flake8-boolean-trap
    "C90",  # mccabe complexity
]
extend-select = ["PLC0415"]

ignore = [
    "TC001",  # Move import into TYPE_CHECKING - too aggressive
    "TC003",  # Move standard lib import into TYPE_CHECKING
]

[tool.ruff.lint.per-file-ignores]
"tools/*" = ["T20", "S603", "S607", "C901", "PERF403"]
"tests/*" = ["S101", "S105", "S106", "S108", "S603", "T20", "SLF001", "ARG", "FBT", "PLC0415", "A002"]
"demos/*" = ["T20", "S311", "C901"]
"scripts/*" = ["T20", "S108", "S603", "S607", "PLC0415"]
"src/punt_lux/__main__.py" = ["T20", "FBT", "PLC0415"]
"src/punt_lux/consent.py" = ["PLC0415"]
"src/punt_lux/runtime.py" = ["S102", "BLE001"]
"src/punt_lux/config.py" = ["S607"]
"src/punt_lux/hooks.py" = ["S607"]
"src/punt_lux/display/server.py" = ["PLC0415"]
"src/punt_lux/display/menu_manager.py" = ["PLC0415"]
"src/punt_lux/display/element_renderer.py" = ["PLC0415"]
"src/punt_lux/display/table_renderer.py" = ["PLC0415"]
"src/punt_lux/display/texture_cache.py" = ["PLC0415"]
"src/punt_lux/display/idle_screen.py" = ["PLC0415"]
"src/punt_lux/display/macos.py" = ["PLC0415"]
"src/punt_lux/cli.py" = ["T20", "FBT", "PLC0415"]
"src/punt_lux/show.py" = ["T20", "FBT", "PLC0415"]
"src/punt_lux/luxd.py" = ["PLC0415"]
"src/punt_lux/apps/beads.py" = ["PLC0415"]
"src/punt_lux/tools/server.py" = ["PLC0415"]
"src/punt_lux/tools/__init__.py" = ["PLC0415"]
# Element classes use `id` as a keyword/field name throughout the protocol —
# it matches the wire format ({"kind":"text","id":...}), the spike, and 55+
# existing call sites. Shadowing the builtin is the established convention
# for this directory; A002 is suppressed for protocol/elements/ only.
"src/punt_lux/protocol/elements/*.py" = ["A002"]
"src/punt_lux/service.py" = ["S603", "S607", "PLC0415"]
"src/punt_lux/_backends.py" = ["S603", "S607", "PLC0415"]
# Lazy imports to break circular dependency chains in domain/protocol layers
"src/punt_lux/domain/event_handler_host.py" = ["PLC0415"]
"src/punt_lux/domain/hub/clients.py" = ["PLC0415"]
"src/punt_lux/domain/hub/element_index.py" = ["PLC0415"]
"src/punt_lux/protocol/element_factory.py" = ["PLC0415"]
"src/punt_lux/protocol/elements/dialog_codec.py" = ["PLC0415"]
# Native serialization for Hub→Display element transport (trusted IPC)
"src/punt_lux/protocol/messages/scene.py" = ["PLC0415", "S301"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["punt_lux"]
combine-as-imports = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
enable_error_code = ["ignore-without-code"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "imgui_bundle.*",
    "OpenGL.*",
    "typer.*",
    "setproctitle.*",
    "starlette.*",
    "uvicorn.*",
    "mcp.*",
    "fastmcp.*",
    "numpy.*",
    "PIL.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["punt_lux.display", "punt_lux.display.*"]
warn_unused_ignores = false
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
reportMissingTypeStubs = false

[[tool.pyright.executionEnvironments]]
root = "src/punt_lux/tools"
reportPrivateUsage = false

[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q -m 'not slow and not integration and not e2e'"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests (socket IPC, cross-component; no display process required)",
    "e2e: marks end-to-end tests requiring full stack",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2
