[project]
name = "lux-spike-io-model"
version = "0.0.1"
description = "Minimal three-process spike of the io-model architecture (agent + hub + display, Unix-socket IPC, text + recording surfaces)."
requires-python = ">=3.13"
dependencies = []

[project.scripts]
lux-spike-hub = "lux_spike.hub:main"
lux-spike-display = "lux_spike.display:main"
lux-spike-agent = "lux_spike.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lux_spike"]
